// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Report Snapshots should generate a consistent markdown report for standard violations 1`] = `
"# 📊 Atlas Audit Executive Summary

> **Session ID:** \`test-report-123\`  
> **Date:** 17/03/2026, 5:30:00 pm  

## 📈 Health Overview

| Metric | Status | Count |
| :--- | :--- | :--- |
| **Site Health** | 🔴 Attention Required | - |
| **Critical Issues** | 🔴 High Impact | 1 |
| **Warnings** | 🟡 Medium Impact | 1 |
| **Pages Visited** | 🗺️ Unique URLs | 1 |
| **Avg Load Time** | ⚡ Performance | 450ms |

#### 🔄 Visit Frequency

| Page | Visits | Last Visit |
| :--- | :--- | :--- |
| [/](/) | **1** | 5:30:00 pm |

--- 

## 🗺️ User Journey Analysis

### Step 1: http://example.com/
🔗 **Masked:** [http://example.com/](http://example.com/)  
🛠️ **Local:** [http://localhost:3000/](http://localhost:3000/)  
⏱️ *5:30:00 pm* • ⚡ **Load:** 450ms • 💾 **Storage:** 120KB • ⏳ **Duration:** End

#### 🟡 Broken Link: /missing-image.png
**Impact:** Users will encounter missing content or broken navigation, hurting trust.  
**Fix:** Update the link to a valid URL or remove the broken reference.
**Sourced from:** \`http://localhost:3000/missing-image.png\`  

#### 🔴 PII Leak(Email) detected in /profile: user***@example.com
**Impact:** Potential impact on user experience.  
**Fix:** Review the affected resource and ensure it is accessible.
**Sourced from:** \`http://localhost:3000/profile\`  

---


*This report was automatically generated by Atlas Browser Orchestrator.*
"
`;

exports[`Report Snapshots should generate a simple report with no violations 1`] = `
"# 📊 Atlas Audit Executive Summary

> **Session ID:** \`test-report-123\`  
> **Date:** 17/03/2026, 5:30:00 pm  

## 📈 Health Overview

| Metric | Status | Count |
| :--- | :--- | :--- |
| **Site Health** | 🟢 Perfect | - |
| **Critical Issues** | 🔴 High Impact | 0 |
| **Warnings** | 🟡 Medium Impact | 0 |
| **Pages Visited** | 🗺️ Unique URLs | 1 |

#### 🔄 Visit Frequency

| Page | Visits | Last Visit |
| :--- | :--- | :--- |
| [/](/) | **1** | 5:30:00 pm |

--- 

## 🗺️ User Journey Analysis

### Step 1: http://example.com/
🔗 **Masked:** [http://example.com/](http://example.com/)  
🛠️ **Local:** [http://localhost:3000/](http://localhost:3000/)  
⏱️ *5:30:00 pm* • ⏳ **Duration:** End

> **Status:** ✅ *No critical issues detected on this page.*

---


*This report was automatically generated by Atlas Browser Orchestrator.*
"
`;
